--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ body {
   align-items: center;
   background-color: #fff;
   list-style: none;
- 
 }
 
 .nav-link {
@@ -34,4 +33,19 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
+}
+
+.img {
+  width: 300px;
+  height: 300px;
+}
+
+.photo {
+  width: 400px;
+  height: 400px;
+  background-image: url("../assets/img/DSC_2893\ \(4\)\ \(1\)-round.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  box-shadow: 0 0 0 0, 0 0 9px rgb(197, 197, 197);
 }
