--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,15 @@ body {
   display: flex;
 }
 
+.container-right{
+    display: flex;
+
+}
+
+.container-left{
+    display: flex;
+}
+
 .img {
   width: 300px;
   height: 300px;
@@ -43,6 +52,7 @@ body {
 .photo {
   width: 400px;
   height: 400px;
+  margin-top: 50px;
   background-image: url("../assets/img/DSC_2893\ \(4\)\ \(1\)-round.png");
   background-repeat: no-repeat;
   background-position: center;
