fix: edit data and fonts

--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,17 @@
   border: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
+  max-width: 1440px;
+  margin: 0 auto;
   font-family: "Jost", sans-serif;
   min-height: 100vh;
+  line-height: 1.5;
+  font-size: 16px;
 }
 
 .nav-list {
@@ -17,16 +24,17 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: hsl(206, 45%, 38%);
   list-style: none;
 }
 
 .nav-link {
-  font-size: 30px;
+  font-size: 20px;
+  font-weight: 400;
   padding: 0 20px;
   line-height: 50px;
   text-decoration: none;
-  color: rgb(2, 126, 249);
+  color: #ffff;
 }
 
 .main {
@@ -35,27 +43,85 @@ body {
   display: flex;
 }
 
-.container-right{
-    display: flex;
-
+.container-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  padding: 40px;
 }
 
-.container-left{
-    display: flex;
-}
-
-.img {
-  width: 300px;
-  height: 300px;
+.container-left {
+  display: flex;
+  width: 35%;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(206, 45%, 38%);
+  height: 90vh;
 }
 
 .photo {
-  width: 400px;
-  height: 400px;
+  width: 200px;
+  height: 200px;
   margin-top: 50px;
-  background-image: url("../assets/img/DSC_2893\ \(4\)\ \(1\)-round.png");
-  background-repeat: no-repeat;
+  background-image: url("../assets/img/photo-r.png");
   background-position: center;
   border-radius: 50%;
   box-shadow: 0 0 0 0, 0 0 9px rgb(197, 197, 197);
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.contact-list {
+  color: #ffff;
+  list-style: none;
+}
+
+.mail,
+.git,
+.telegram {
+  text-decoration: none;
+  color: rgb(233, 197, 149);
+  transition: 0.4s;
+}
+
+.mail:hover,
+.git:hover,
+.telegram:hover {
+  font-size: 20px;
+}
+
+.section-title-right {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  margin: 30px 0px 15px 0px;
+}
+
+.section-title-left-h1 {
+  text-transform: uppercase;
+  font-size: 25px;
+  color: #ffff;
+  font-weight: 400;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.section-title-left {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  color: #ffff;
+  font-weight: 400;
+  margin: 30px 0px 15px 0px;
+}
+
+.project-link{
+ color:  rgb(233, 197, 149);
 }
