fix: img and contacts(hover selector)

--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,18 @@ body {
   width: 200px;
   height: 200px;
   margin-top: 50px;
-  background-image: url("../assets/img/photo-r.png");
-  background-position: center;
   border-radius: 50%;
   box-shadow: 0 0 0 0, 0 0 9px rgb(209, 209, 209);
+  filter: grayscale(0.2) brightness(1.05);
+  object-fit: cover;
+  transition: 0.3s;
 }
 
-.section-title-left-h1 {
+.photo:hover {
+  filter: none;
+}
+
+.section-title-left-profile {
   text-transform: uppercase;
   font-size: 25px;
   color: #ffff;
@@ -101,8 +106,8 @@ body {
 }
 
 .link-contacts:hover {
-  font-size: 20px;
   color: rgb(241, 152, 36);
+  box-shadow: 0 2px 0 0 rgb(241, 152, 36, 0.7);
 }
 
 .container-right {
@@ -188,7 +193,8 @@ body {
 }
 
 .link-git:hover {
-  font-size: 20px;
+  color: rgb(241, 152, 36);
+  box-shadow: 0 2px 0 0 rgb(241, 152, 36, 0.7);
 }
 
 @media (max-width: 912px) {
